# stlencoders

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile.in  Doxymain  Makefile.am  NEWS  README  autogen.sh  configure.ac  stlencoders.props  stlencoders.sln
debian/: .gitignore  changelog  control  copyright  rules  stlencoders-dev.examples
doc/: Doxyfile.in  Doxymain  Makefile.am
include/: Makefile.am  base16.hpp  base2.hpp  base32.hpp  base64.hpp  codecvt_base16.hpp  error.hpp  iterator.hpp  lookup.hpp  traits.hpp
include/stlencoders/: base16.hpp  base2.hpp  base32.hpp  base64.hpp  error.hpp  iterator.hpp  lookup.hpp  traits.hpp
src/: .gitignore  Makefile.am  check.sh  getopt.hpp  stlbench.cpp  stlbench.vcxproj  stldecode.cpp  stldecode.vcxproj  stlencode.cpp  stlencode.vcxproj
tests/: .gitignore  Makefile.am  portable.txt  test_base16.cpp  test_base16.hpp  test_base16.vcxproj  test_base2.cpp  test_base2.hpp  test_base2.vcxproj  test_base32.cpp  test_base32.hpp  test_base32.vcxproj  test_base64.cpp  test_base64.hpp  test_base64.vcxproj  test_codecvt_base16.cpp  test_codecvt_base16.hpp  test_lookup.cpp  test_lookup.hpp  test_lookup.vcxproj  test_sample.cpp  test_traits.cpp  test_traits.hpp  test_traits.vcxproj  tests.vcxproj  util.hpp  vcxtests.cpp  xassert.hpp
